var/www/html/torrentwatch-xa/css/torrentwatch-xa.css
/* ... */
#configuration .config_form_container input[type=checkbox] {
    left: 150px;
}

.config_form_container {
    border: 1px solid #979797;
    border-top: 0;
    background-color: #eee;
    padding: 0;
    margin: 0 0 0 0 ;
}

.config_form_container .left {
    width: 167px;
}

#config_form div {
    min-height: 22px;
}

#config_form div.configTab {
    padding: 5px 0 5px 0;
}

#config_feeds {
    padding-top: 5px;
}

#config_feeds #feedItems {
    max-height: 280px;
    overflow: auto;
}

#addFeed {
    border-bottom: 1px solid #979797;
    padding-bottom: 5px;
}

#feedItemTitles {
    margin: 3px 0 5px 7px;
}

#feedNameUrl {
    margin-left: 0;
    float: left;
    /*width: 315px;*/
    width: 296px;
}

#addFeed input.feed_link[type=text] {
    width: 310px;
    margin: 0 0;
    padding: 1px 3px;
    left: 87px;
}

#addFeed a.button {
    margin: 0 10px 0 0;
    padding: 1px 0 3px 0;
}


#config_feeds div.feeditem {
    height: 35px;
}

#config_feeds div.feeditem label.item {
    position: relative;
    white-space: nowrap;
    overflow: hidden;
    width: auto;
    padding: 5px;
}

#config_feeds div.feeditem input[type=text] {
    /*width: 296px;*/
    width: 280px;
    margin: 3px 0;
    padding: 1px 3px 1px 3px;
    left: 0;
    font-size: 0.9em;
}

#config_feeds div.feeditem input.feed_url[type=text],
#config_feeds div.feeditem input.feed_name[type=text] {
    margin: 1px 3px 1px 10px;
}

#config_feeds div.feeditem input.seed_ratio[type=text] {
    width: 2em;
    margin-left: 6px;
}

#config_feeds div.feeditem a.button {
    width: 30px;
    margin: 3px 10px 0 0;
    padding: 3px 0 3px 0;
}

#config_feeds div.feeditem a.button#Update {
    margin-right: 5px;
}

#showURL {
    padding: 5px 0 5px 0;
    border-top: 1px solid #979797;
}

#showURL input[type=checkbox] {
    margin-left: 10px;
}

#configuration .config_form_container input#hideSearchText {
    border: 0;
    border-top: 1px solid #979797;
    width: 438px; /* had !important */
    height: 18px;
    margin: 0;
    padding: 1px 3px 0 20px;
    background: #FFF url('../images/search_32x32.png') top left no-repeat;
    background-size: 17px 17px;
    font-size: 0.9em;
}

#hidelistContainer {
    max-height: 300px;
    overflow: auto;
}

#hidelistContainer ul.hidelist li {
    overflow: hidden;
}

#hidelistContainer ul.hidelist li:hover {
    background-color: #9DACC1;
    color: #FFF;
}

#linkButtons  {
    float: right;
}

/***********************************
 * F A V O R I T E S   D I A L O G
 **********************************/
#favorites {
    width: 590px;
    margin-left: -287px;
    height: 267px; /* was 247px */
    padding-top: 5px;
}

#favDialog .dialogTitle {
    padding-top: 2px;
    width: 600px;
    margin-left: -287px;
}

div.favorite {
    height: 265px; /* was 245px */
    width: 198px;
    float: left;
    clear: left;
    border: 1px solid #979797;
    padding: 0;
    background-color: #eee;
}

ul.favorite {
    height: 265px; /* was 245px */
    font-size: 120%;
    overflow: auto;
}

div.favinfo {
    height: 265px; /* was 245px */
    float: right;
    clear: right;
    border: 1px solid #979797;
    padding: 0 0 0 5px;
    width: 380px;
    background-color: #eee;
}

div.favinfo .right {
    vertical-align: top;
}

div.favinfo .left {
    width: 90px;
    vertical-align: top;
}

ul.favorite li {
    padding-left: 6px;
    padding-right: 3px;
    padding-bottom: 4px;
    word-break: break-all; /* requires CSS3, otherwise breaks at space */
    overflow: hidden;
    cursor: pointer;
    height: 20px;
}

ul.favorite li a {
    vertical-align: middle;
    font-size: 0.8em;
    text-decoration: none;
    color: #000000;
    overflow: hidden;
}

ul.favorite li:hover {
    background-color: #9DACC1;
}

ul.favorite li:hover a {
    color: #FFF;
}

form.favinfo {
    /*height: 268px;*/ /* was 248px */
    display: none;
    padding: 5px 0;
    margin: 5px 0;
    width: 380px;
    float: right;
}
form.favinfo div {
    height: 24px;
}

form.favinfo #mode,
form.favinfo input#idx {
    display: none;
}

form.favinfo select {
    /*position: absolute;
    right: 15px;*/
    width: 272px;
}

form.favinfo input.text,
form.favinfo input[type=text] {
    /*position: absolute;
    right: 15px;*/
    width: 270px;
}

form.favinfo div.favorite_seed_and_episode {
    /*position: absolute;*/
    float: right;
    /*right: 25px;*/
    width: 380px; /* was 360px */
}

form.favinfo label.lastSeason {
    /*position: absolute;
    right: 115px;
    top: 2px;*/
    margin-left: 0;
    padding-left: 9px;
}

form.favinfo label.lastEpisode{
    /*position: absolute;
    right: 56px;
    top: 2px;*/
    margin-left: 0;
}

form.favinfo input.seedratio[type=text] {
    /*position: absolute;
    right: 240px;*/
    width: 20px;
    text-align: center;
}

form.favinfo input.lastSeason[type=text] {
    /*position: absolute;
    right: 65px;*/
    width: 40px;
    text-align: center;
}

form.favinfo input.lastEpisode[type=text] {
    /*position: absolute;
    right: -10px;*/
    width: 60px;
    text-align: center;
    margin-left: 0;
}

#favorite_new.favinfo input.lastEpisode[type=text] {
    /*position: absolute;
    right: -10px;*/
    width: 125px; /* was 115px */
    text-align: center;
}

/*div.favinfo div.buttonContainer {
    position: relative;
    left: -76px;
    top: -2px;
}*/

div.favinfo div.buttonContainer {
    position: absolute;
    top: 230px; /* was 210px */
    right: 82px; /* was 84px */
}

/*#favClose {
    position: relative;
    left: -7px;
    top: -38px;
}*/

#favClose {
    /*position: absolute;
    top: 230px;*/
    right: 13px;
}

/******************************
 * H I S T O R Y   D I A L O G
 *****************************/
#history {
    padding: 0;
    height: 257px;
    width: 583px;
    margin-left: -288px;
    border-top: 1px solid #979797;
    background: #eee;
}

#historyItems li {
    margin-right: 7px;
    white-space: nowrap;
    overflow: visible;
    font-size: 0.9em
}
/* ... */

